--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@quasar/extras": "^1.0.0",
     "bulma": "^0.8.0",
     "firebase": "^7.10.0",
+    "lodash": "^4.17.15",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
