--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
+    "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.1.2"
   },
   "engines": {
